// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should be without ripple effect button 1`] = `
<DocumentFragment>
  <button
    class="btn btn__md btn__primary"
  >
    Test
  </button>
</DocumentFragment>
`;

exports[`<Button /> should render to match snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn btn__md btn__primary btn__primary-shadow"
    style="width: 100px;"
  >
    <svg
      aria-hidden="true"
      class="w-8 pr-2 right-4"
      fill="currentColor"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 3a2 2 0 100 4h12a2 2 0 100-4H4z"
      />
      <path
        clip-rule="evenodd"
        d="M3 8h14v7a2 2 0 01-2 2H5a2 2 0 01-2-2V8zm5 3a1 1 0 011-1h2a1 1 0 110 2H9a1 1 0 01-1-1z"
        fill-rule="evenodd"
      />
    </svg>
    Button A
  </button>
</DocumentFragment>
`;

exports[`<Button /> should render without props 1`] = `
<DocumentFragment>
  <button
    class="btn btn__md btn__primary"
  >
    Button A
  </button>
</DocumentFragment>
`;
